# second

./: .env.example  .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  tsconfig.json
backend/: main.py  pyproject.toml  requirements.txt
backend/db/: __init__.py  database.py
backend/diarization/: __init__.py  pipeline.py
backend/ipc/: __init__.py  handlers.py  protocol.py
backend/speaker_id/: __init__.py  identifier.py
backend/summaries/: file_manager.py
backend/summarization/: __init__.py  providers.py
backend/tests/: __init__.py  conftest.py  test_db.py  test_diarization.py  test_e2e_pipeline.py  test_handlers_extended.py  test_ipc.py  test_real_audio_pipeline.py  test_speaker_id.py  test_summaries.py  test_summarization.py  test_transcription.py
backend/transcription/: __init__.py  engine.py
docs/: PRD.md
scripts/: check.sh  dev.sh  setup.sh
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  sidecar.rs
src-tauri/src/audio/: capture.rs  devices.rs  mod.rs
src/lib/components/: RecordingPage.svelte  SettingsPage.svelte  SpeakerLabelingModal.svelte  SummariesPage.svelte
src/lib/services/: sidecar.ts
src/lib/stores/: app.svelte.ts
src/lib/types/: index.ts
