[project]
name = "second-backend"
version = "0.1.0"
description = "Python sidecar backend for Second — AI meeting note-taker"
requires-python = ">=3.11"
dependencies = [
    "mlx-whisper>=0.4",
    "pyannote-audio>=3.1",
    "torch>=2.1",
    "numpy>=1.26",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = ["slow: tests requiring real ML model inference (may take minutes)"]
